# FINBIN

./: .env.example  .gitignore  EXECUTION_GUIDE.md  MODEL_TRAINING_WORKFLOW.md  NEWS_SYSTEM_COMPLETE.md  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  start.bat  start.sh
api/: main.py  websocket.py
backend/: Dockerfile  config.py  database.py  main.py  requirements.txt
backtesting/: engine.py  metrics.py  visualizer.py
cli/: dashboard.py  main.py  terminal.py
config/: settings.py
dashboard/: app.py
data_ingestion/: main.py
database/: init.sql  models.py  newsdata_articles_20260401_195702_001.sql  schema.sql
db/: schema.sql
docker/: backend.Dockerfile  frontend.Dockerfile  worker.Dockerfile
docs/: API_FINETUNE.md  CUDA_INTEGRATION_PLAN.md  DEPLOYMENT.md  FINETUNE_API_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LLM_FINETUNE_API_GUIDE.md  LLM_FINETUNE_GUIDE.md  MODEL_DEPLOYMENT_SCHEMA.md  NEWSAPI_IMPLEMENTATION_GUIDE.md  NEWSAPI_TOKEN_OPTIMIZATION.md  NEWS_MARKET_LINKING_GUIDE.md
frontend/: Dockerfile  app.py  nginx.conf  requirements.txt
llm_trainer/: Dockerfile  export_dataset.py  package_ollama.py  requirements.txt  train_lora_cpu.py  train_qlora.py
local_trainer/: merge_and_compile.sh  prepare_dataset.py  start_full_training_pipeline.ps1  train_crypto_lora_cpu.py  train_crypto_qlora.py
scripts/: collect_long_horizon_training_data.py  deploy_model.ps1  deploy_model.sh  export_binance_training_sql.py  export_etherscan_eth_sql.py  export_newsdata_to_sql.py  replace_active_model.ps1  (+13 more)
(+97 files in other folders)
